# ail-feeder-youtube-subs

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
etc/: feeder.cfg.sample
